--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"url": "git+https://github.com/amilcar-laniakea/coderhouse-backend.git"
 	},
 	"dependencies": {
+		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"multer": "^1.4.4"
 	},
