--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"url": "git+https://github.com/amilcar-laniakea/coderhouse-backend.git"
 	},
 	"dependencies": {
-		"ejs": "^3.1.6",
 		"express": "^4.17.3",
-		"multer": "^1.4.4"
+		"multer": "^1.4.4",
+		"express-handlebars": "5.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
