--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
+		"formidable": "^2.0.1",
 		"multer": "^1.4.4"
 	},
 	"devDependencies": {
